# UI_labs_2020_testing_prj

./: CMakeLists.txt  test.cpp
headers/: ICompact.h  ILogger.h  ISet.h  IVector.h  test.h
impl/: ICompact.cpp  ICompactImpl.cpp  ILogger.cpp  ILoggerImpl.cpp  ISet.cpp  ISetImpl.cpp  IVector.cpp  IVectorImpl.cpp
test/: compact.cpp  set.cpp  vector.cpp
